add file pattern